création des fichiers, config routes et services

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -96,6 +96,11 @@ parameters:
                 site_feuilles:
                     nom: 'Feuilles'
                     niveau: 'ROLE_SITE'
+                    url : '/admin/site/feuilles'
+                    extra_routes: 
+                        - admin_site_feuilles_list
+                        - admin_site_feuilles_add
+                        - admin_site_feuilles_edit
                 site_rubriques:
                     nom: 'Rubriques'
                     niveau: 'ROLE_SITE'
