--- a/app/config/routing/admin_site.yml
+++ b/app/config/routing/admin_site.yml
@@ -19,4 +19,26 @@ admin_site_rubriques_delete:
     id: '\d+'
     token: '[a-zA-Z0-9_-]+'
 
+admin_site_feuilles_list:
+  path: /feuilles
+  defaults: {_controller: AppBundle\Controller\Admin\Site\ListFeuillesAction}
+
+admin_site_feuilles_add:
+  path: /feuilles/add
+  defaults: {_controller: AppBundle\Controller\Admin\Site\AddFeuilleAction}
+  
+admin_site_feuilles_edit:
+  path: /feuilles/edit/{id}
+  defaults: {_controller: AppBundle\Controller\Admin\Site\EditFeuilleAction}
+  requirements:
+    id: '\d+'
+
+admin_site_feuilles_delete:
+  path: /feuilles/delete/{id}/{token}
+  defaults: {_controller: AppBundle\Controller\Admin\Site\DeleteFeuilleAction}
+  requirements:
+    id: '\d+'
+    token: '[a-zA-Z0-9_-]+'
+
+
   
